Add support for proxy
Add variables related to proxy configuration
and update ck8s control plane and config
templates to use the proxy configuration

--- a/charts/openstack-ck8s-cluster/templates/control-plane/canonical-k8s-control-plane.yaml
+++ b/charts/openstack-ck8s-cluster/templates/control-plane/canonical-k8s-control-plane.yaml
@@ -46,6 +46,15 @@ spec:
       - echo "--authentication-token-webhook-config-file=/var/snap/k8s/common/args/conf.d/k8s-auth-token-webhook.conf" >> /var/snap/k8s/common/args/kube-apiserver
       - sudo snap restart k8s.kube-apiserver
     {{- end }}
+    {{- if and .Values.proxy .Values.proxy.httpProxy }}
+    httpProxy: {{ .Values.proxy.httpProxy }}
+    {{- end }}
+    {{- if and .Values.proxy .Values.proxy.httpsProxy }}
+    httpsProxy: {{ .Values.proxy.httpsProxy }}
+    {{- end }}
+    {{- if and .Values.proxy .Values.proxy.noProxy }}
+    noProxy: {{ .Values.proxy.noProxy }}
+    {{- end }}
     controlPlane:
       cloudProvider: external
       {{- if .Values.addons.openstack.k8sKeystoneAuth.enabled }}
